--- a/Views/ArticleCreationView.xaml
+++ b/Views/ArticleCreationView.xaml
@@ -5,29 +5,14 @@
     xmlns:local="using:StockApp.Views"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d"
-    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    mc:Ignorable="d">
 
-    <Grid Padding="20">
+    <Grid Width="600">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-
-        <!-- Header -->
-        <Grid Grid.Row="0" Margin="0,0,0,20">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto"/>
-                <ColumnDefinition Width="*"/>
-            </Grid.ColumnDefinitions>
-
-            <TextBlock Grid.Column="1" 
-                       Text="Create New Article" 
-                       Style="{StaticResource TitleTextBlockStyle}" 
-                       FontSize="28" 
-                       FontWeight="SemiBold"/>
-        </Grid>
 
         <!-- Form -->
         <ScrollViewer Grid.Row="1" VerticalScrollBarVisibility="Auto">
@@ -78,40 +63,6 @@
                          Severity="Error"/>
             </StackPanel>
         </ScrollViewer>
-
-        <!-- Actions -->
-        <Grid Grid.Row="2" Margin="0,20,0,0">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="Auto"/>
-            </Grid.ColumnDefinitions>
-
-            <Button Grid.Column="0" 
-                    Command="{x:Bind ViewModel.ClearCommand}"
-                    HorizontalAlignment="Left">
-                <StackPanel Orientation="Horizontal" Spacing="8">
-                    <FontIcon Glyph="&#xE74D;"/>
-                    <TextBlock Text="Clear Form"/>
-                </StackPanel>
-            </Button>
-
-            <StackPanel Grid.Column="1" Orientation="Horizontal" Spacing="8">
-                <Button Command="{x:Bind ViewModel.PreviewCommand}">
-                    <StackPanel Orientation="Horizontal" Spacing="8">
-                        <FontIcon Glyph="&#xE787;"/>
-                        <TextBlock Text="Preview"/>
-                    </StackPanel>
-                </Button>
-                <Button Command="{x:Bind ViewModel.SubmitCommand}" 
-                        Style="{StaticResource AccentButtonStyle}">
-                    <StackPanel Orientation="Horizontal" Spacing="8">
-                        <FontIcon Glyph="&#xE724;"/>
-                        <TextBlock Text="Submit"/>
-                    </StackPanel>
-                </Button>
-            </StackPanel>
-        </Grid>
-
         <!-- Loading Overlay -->
         <Grid Grid.RowSpan="3" 
               Background="{ThemeResource SolidBackgroundFillColorBaseBrush}" 
